Added by Day view in monthly overview